--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.38.0",
+    "@aws-sdk/client-rds-data": "latest",
+    "@cloudflare/workers-types": "latest",
+    "@electric-sql/pglite": "latest",
     "@hookform/resolvers": "latest",
+    "@libsql/client": "latest",
+    "@libsql/client-wasm": "latest",
+    "@neondatabase/serverless": "latest",
+    "@op-engineering/op-sqlite": "latest",
+    "@opentelemetry/api": "latest",
+    "@planetscale/database": "latest",
+    "@prisma/client": "latest",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -37,16 +48,39 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "autoprefixer": "^10.4.20",
+    "@supabase/supabase-js": "latest",
+    "@tidbcloud/serverless": "latest",
+    "@types/better-sqlite3": "latest",
+    "@types/pg": "latest",
+    "@types/sql.js": "latest",
+    "@vercel/postgres": "latest",
+    "@xata.io/client": "latest",
+    "better-sqlite3": "latest",
+    "bun-types": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cookie": "latest",
+    "crypto": "latest",
     "date-fns": "latest",
+    "drizzle-orm": "latest",
     "embla-carousel-react": "8.5.1",
+    "expo-sqlite": "latest",
+    "gel": "latest",
     "input-otp": "1.4.1",
+    "jose": "latest",
+    "knex": "latest",
+    "kysely": "latest",
+    "lru-cache": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.1.0",
+    "mailersend": "latest",
+    "mysql2": "latest",
+    "next": "^14.2.26",
+    "next-auth": "^4.24.7",
     "next-themes": "latest",
+    "nodemailer": "latest",
+    "pg": "latest",
+    "postgres": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -54,55 +88,22 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "latest",
-    "@auth/core": "latest",
-    "nodemailer": "latest",
-    "pg": "latest",
-    "gel": "latest",
-    "knex": "latest",
-    "kysely": "latest",
-    "mysql2": "latest",
     "sql.js": "latest",
     "sqlite3": "latest",
-    "postgres": "latest",
-    "@types/pg": "latest",
-    "bun-types": "latest",
-    "expo-sqlite": "latest",
-    "@types/sql.js": "latest",
-    "@libsql/client": "latest",
-    "@prisma/client": "latest",
-    "better-sqlite3": "latest",
-    "@xata.io/client": "latest",
-    "@vercel/postgres": "latest",
-    "@opentelemetry/api": "latest",
-    "@libsql/client-wasm": "latest",
-    "@electric-sql/pglite": "latest",
-    "@planetscale/database": "latest",
-    "@tidbcloud/serverless": "latest",
-    "@types/better-sqlite3": "latest",
-    "@aws-sdk/client-rds-data": "latest",
-    "@neondatabase/serverless": "latest",
-    "@cloudflare/workers-types": "latest",
-    "@op-engineering/op-sqlite": "latest",
-    "next-auth": "latest",
-    "@supabase/supabase-js": "latest",
-    "drizzle-orm": "latest",
-    "crypto": "latest",
-    "jose": "latest",
-    "cookie": "latest",
-    "mailersend": "latest",
-    "stripe": "latest",
+    "stripe": "^18.0.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "latest",
-    "lru-cache": "latest"
+    "vaul": "^0.9.6",
+    "zod": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
+    "@types/stripe": "^8.0.417",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
