--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/node",
-        "config": {
-          "installCommand": "npm install --legacy-peer-deps"
-        }
-      }
-    ]
-  }
-  
+  "installCommand": "npm install --force"
+}
