--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "cookie": "latest",
     "crypto": "latest",
     "date-fns": "latest",
-    "drizzle-orm": "latest",
+    "drizzle-orm": "^0.41.0",
     "embla-carousel-react": "8.5.1",
     "expo-sqlite": "latest",
     "gel": "latest",
